updated a few things

--- a/public/locales/en/footer.json
+++ b/public/locales/en/footer.json
@@ -12,9 +12,9 @@
   "link-facebook": "Facebook",
   "link-youtube": "Youtube",
   "link-contact-us": "Contact Us",
-  "link-email": "yourexample@email.com",
-  "link-email-two": "example@email.com",
-  "link-phone": "Call us: +1 254 568-5479",
+  "link-email": "trinitysystem.in@gmail.com",
+  "link-email-two": "help@throttlespace.in",
+  "link-phone": "Call us: +91 81787 78607",
   "link-support-center": "Support Center",
   "link-customer-support": "Customer Support",
   "link-about-us": "About Us",
@@ -26,10 +26,10 @@
   "link-terms": "Terms & conditions",
   "link-return-policy": "Return Policy",
   "link-site-map": "Site Map",
-  "link-men-wear": "Men's Wear",
-  "link-women-wear": "Women's Wear",
-  "link-kids-wear": "Kid's Wear",
-  "link-sports-wear": "Sports Wear",
+  "link-men-wear": "Custom Li-Ion Packs",
+  "link-women-wear": "ELRS Radios",
+  "link-kids-wear": "Custom FPV Drone Build",
+  "link-sports-wear": "FPV Equipments",
   "payment-master-card": "Master Card",
   "payment-visa": "Visa",
   "payment-paypal": "Paypal",
