--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -100,11 +100,11 @@
   "text-get-in-touch": "Get in touch",
   "text-find-us-here": "Find us here",
   "text-address": "Address",
-  "text-address-details": "PO Box 14122 Collins Street West.Victoria",
+  "text-address-details": "Trinity Systems, C-30, First Floor, Flat-5, Paryavaran Complex, Ignou Road, New Delhi - 110030, India",
   "text-email": "Email",
-  "text-email-details": "example@example.com",
+  "text-email-details": "trinitysystem.in@gmail.com",
   "text-phone": "Phone",
-  "text-phone-details": "+1 1234 5678 90, +1 0987 6543 21",
+  "text-phone-details": "+91 81787 78607, +91 93196 16722",
   "text-order-received": "Thank you. Your order has been received.",
   "text-pay-cash": "Pay with cash upon delivery.",
   "text-order-details": "Order details",
@@ -132,7 +132,6 @@
   "text-featured-categories": "Featured Categories",
   "text-browse-categories": "Browse Categories",
   "text-top-brands": "Top Brands",
-
   "text-featured-products": "Featured Products",
   "text-on-selling-products": "On Selling Products",
   "text-top-products": "Top Products",
