--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -3,7 +3,7 @@
   "error-sub-heading": "We can't find the page you're looking for",
   "support-heading": "Talk To A Real Person",
   "support-sub-heading": "Are you on the fence? Have a question? Need a recommendation? Member Services is always here to help. Send us a message.",
-  "app-heading": "The ChawkBazar App",
+  "app-heading": "The ThrottleSpace App",
   "app-sub-heading": "<span> Share Your <strong>Ideas</strong> &amp; Shop Endless <strong>Inspiration</strong> </span>",
   "collection-title-one": "New Spring Knits",
   "collection-description-one": "Endlessly versatile new styles that say yes to spring. The season’s looking bright.",
@@ -156,7 +156,7 @@
   "text-summer-collection": "Summer Collection",
   "text-subscribe-now": "subscribe now",
   "text-newsletter-title": "And Get Offer On New Collection",
-  "text-newsletter-subtitle": "Do subscribe the ChawkBazar to receive updates on new arrivals, special offers & our promotions",
+  "text-newsletter-subtitle": "Do subscribe the ThrottleSpace to receive updates on new arrivals, special offers & our promotions",
   "text-collection-list": "Collection List",
   "text-collections": "Collections",
   "text-accept-cookies": "Accept cookies",
