updated a lot of things

--- a/public/locales/en/footer.json
+++ b/public/locales/en/footer.json
@@ -12,7 +12,7 @@
   "link-facebook": "Facebook",
   "link-youtube": "Youtube",
   "link-contact-us": "Contact Us",
-  "link-email": "trinitysystem.in@gmail.com",
+  "link-email": "info@throttlespace.in",
   "link-email-two": "help@throttlespace.in",
   "link-phone": "Call us: +91 81787 78607",
   "link-support-center": "Support Center",
